--- a/src/web/static/web/map.css
+++ b/src/web/static/web/map.css
@@ -3,6 +3,54 @@ body {
     margin: 0;
 }
 
-html, body, #map {
+html, body {
     height: 100%;
+}
+
+#map {
+    height: 100%;
+    position: relative;
+}
+
+#search {
+    position: absolute;
+    right: 0.5em;
+    top: 0.5em;
+}
+
+#filters {
+    padding-top: 1em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+}
+
+.filter {
+    padding: 0.5em;
+}
+
+#time-of-day-slider {
+    display: inline-block;
+    width: 80%;
+}
+
+#time-of-day {
+    display: inline-block;
+    width: 15%;
+    padding-left: 0.5em;
+}
+
+#filters label {
+    width: 15%;
+    padding-right: 0.5em;
+    display: inline-block;
+    font-weight: bold;
+    text-align: right;
+}
+
+ul#toggles, ul#toggles > li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: inline;
+    width: 100%;
 }
