Added labels to aggregated data.

--- a/src/web/templates/web/base.html
+++ b/src/web/templates/web/base.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="/static/web/stylesheet.css" />
 	<link rel="stylesheet" href="/static/web/jquery-ui-1.11.1.custom/jquery-ui.min.css" />
 	<link rel="stylesheet" href="/static/web/normalize.css" />
+	<link rel="stylesheet" href="/static/web/leaflet.label.js'" />
 
     {% block stylesheets %}{% endblock %}
     {% block head %}{% endblock %}
